mobile overflow bug in mobile fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer base {
+    html.dark body {
+        @apply transition-colors bg-neutral-900 text-white;
+    }
     .property-card:hover .property-card-image {
         @apply shadow-md sm:-translate-y-2;
     }
@@ -17,5 +20,4 @@
         color: #fff;
         display: none !important;
     }
-
 }
